[package]
edition = "2018"
name = "zetelverdeling"
version = "0.2.0"

authors = ["Thomas Villa <thomvil87@gmail.com>"]
description = "A rust 🦀 library to allocating seats in voting systems"
documentation = "https://docs.rs/zetelverdeling/"
homepage = "https://github.com/thomvil/zetelverdeling-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thomvil/zetelverdeling-rs"
